Icon added to .desktop file

--- a/pyspread/pyspread.desktop
+++ b/pyspread/pyspread.desktop
@@ -1,10 +1,21 @@
 [Desktop Entry]
-Encoding=UTF-8
-Icon=/usr/share/pyshared/_pyspread/icons/pyspread.png
-Name=pyspread
-Comment=A Python based spreadsheet
-Exec=/usr/bin/pyspread
-Terminal=false
-Type=Application
 Categories=Math;Spreadsheet;Office
+Comment[en_US]=A Python based spreadsheet
+Comment=A Python based spreadsheet
+Encoding=UTF-8
+Exec=/usr/bin/pyspread
+GenericName[en_US]=
+GenericName=
+Icon=/home/mn/prog/pyspread/pyspread/share/icons/pyspread.png
+MimeType=
+Name[en_US]=pyspread
+Name=pyspread
+Path=
 StartupNotify=false
+Terminal=false
+TerminalOptions=
+Type=Application
+X-DBUS-ServiceName=
+X-DBUS-StartupType=
+X-KDE-SubstituteUID=false
+X-KDE-Username=
