--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ before_script:
 pages:
   script:
   - pip3 install -r requirements.txt
+  - pip3 install -r apidocs/requirements.txt
   - sh ./apidocs/build_docs.sh
   artifacts:
     paths:
