--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ pages:
   script:
   - pip3 install -r requirements.txt
   - pip3 install -r apidocs/requirements.txt
+  - mkdir public
   - sphinx-build -a -b apidocs public/
   artifacts:
     paths:
