--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ pages:
   - pip3 install -r requirements.txt
   - pip3 install -r apidocs/requirements.txt
   - mkdir public
-  - sphinx-build -a -b apidocs public/
+  - sphinx-build -a -b html ./apidocs ./public/
   artifacts:
     paths:
     - public
