--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ before_script:
 pages:
   script:
   - pip3 install -r requirements.txt
-  - pip3 install -r apidocs/requirements.txt
+  - pip3 install -r docs/requirements.txt
   - mkdir public
   - sphinx-build -a -b html ./docs ./public/
   artifacts:
