--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,10 @@
-image: python:3.6
+image: debian
 
-before_script:
-- pip3 install -r requirements.txt
 
 pages:
   script:
+  - apt-get update -qq
+  - apt-get install -y -qq python3-pip libgl1-mesa-dev
   - pip3 install -r requirements.txt
   - pip3 install -r docs/requirements.txt
   - mkdir public
