--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ image: arwineap/docker-debian-python3.6
 pages:
   script:
   - apt-get update -qq
-  - apt-get install -y -qq python3-pip libgl1-mesa-dev libnss3
+  - apt-get install -y -qq python3-pip libgl1-mesa-dev libnss3 libxcomposite1
   - pip3 install -r requirements.txt
   - pip3 install -r docs/requirements.txt
   - mkdir public
